split get workspace details api
