# cmd/clusters-service/pkg/server/workspaces.go
@@ -11,7 +11,6 @@ import (
 	capiv1_proto "github.com/weaveworks/weave-gitops-enterprise/cmd/clusters-service/pkg/protos"
 	"github.com/weaveworks/weave-gitops/core/clustersmngr"
 	"github.com/weaveworks/weave-gitops/pkg/server/auth"
-	"golang.org/x/sync/errgroup"
 	v1 "k8s.io/api/core/v1"
 	rbacv1 "k8s.io/api/rbac/v1"
 	"k8s.io/apimachinery/pkg/runtime/serializer/json"
@@ -51,14 +50,14 @@ func (s *server) ListWorkspaces(ctx context.Context, m *capiv1_proto.ListWorkspa
 	namespaces := clustersmngr.NewClusteredList(func() client.ObjectList {
 		return &v1.NamespaceList{}
 	})
-	if err := clustersClient.ClusteredList(ctx, namespaces, true, opts...); err != nil {
+	if err := clustersClient.ClusteredList(ctx, namespaces, false, opts...); err != nil {
 		return nil, fmt.Errorf("failed to list service accounts, error: %v", err)
 	}
 
 	continueToken = namespaces.GetContinue()
 	listNamespaces = namespaces.Lists()
 
-	workspaces := []*capiv1_proto.WorkspaceItem{}
+	workspaces := []*capiv1_proto.Workspace{}
 
 	for cluster, lists := range listNamespaces {
 		tenants := map[string][]string{}
@@ -79,7 +78,7 @@ func (s *server) ListWorkspaces(ctx context.Context, m *capiv1_proto.ListWorkspa
 			}
 		}
 		for name, namespaces := range tenants {
-			workspaces = append(workspaces, &capiv1_proto.WorkspaceItem{
+			workspaces = append(workspaces, &capiv1_proto.Workspace{
 				Name:        name,
 				Namespaces:  namespaces,
 				ClusterName: cluster,
@@ -94,118 +93,38 @@ func (s *server) ListWorkspaces(ctx context.Context, m *capiv1_proto.ListWorkspa
 	}, nil
 }
 
-func (s *server) GetWorkspace(ctx context.Context, m *capiv1_proto.GetWorkspaceRequest) (*capiv1_proto.GetWorkspaceResponse, error) {
-	if m.ClusterName == "" {
-		return nil, fmt.Errorf("required cluster name")
-	}
-
-	if m.WorkspaceName == "" {
-		return nil, fmt.Errorf("required workspace name")
-	}
-
-	clustersClient, err := s.clustersManager.GetImpersonatedClientForCluster(ctx, auth.Principal(ctx), m.ClusterName)
-	if err != nil {
-		return nil, fmt.Errorf("error getting impersonating client: %w", err)
-	}
-
-	var namespaces []string
-	var serviceAccounts []*capiv1_proto.WorkspaceServiceAccount
-	var roles []*capiv1_proto.WorkspaceRole
-	var roleBindings []*capiv1_proto.WorkspaceRoleBinding
-	var policies []*capiv1_proto.WorkspacePolicy
-
-	opts := []client.ListOption{
-		client.MatchingLabels{tenantLabel: m.WorkspaceName},
-	}
-
-	g, gctx := errgroup.WithContext(ctx)
-
-	g.Go(func() error {
-		var namespaceList v1.NamespaceList
-		if err := clustersClient.List(gctx, m.ClusterName, &namespaceList, opts...); err != nil {
-			return fmt.Errorf("failed to list workspace roles, error: %s", err)
-		}
-		namespaces = getNamespaces(namespaceList)
-		return nil
-	})
-
-	g.Go(func() error {
-		var serviceAccountList v1.ServiceAccountList
-		if err := clustersClient.List(gctx, m.ClusterName, &serviceAccountList, opts...); err != nil {
-			return fmt.Errorf("failed to list workspace service accounts, error: %s", err)
-		}
-		serviceAccounts = getServiceAccounts(serviceAccountList)
-		return nil
-	})
-
-	g.Go(func() error {
-		var roleList rbacv1.RoleList
-		if err := clustersClient.List(gctx, m.ClusterName, &roleList, opts...); err != nil {
-			return fmt.Errorf("failed to list workspace roles, error: %s", err)
-		}
-		roles, err = getRoles(roleList)
-		return err
-	})
-
-	g.Go(func() error {
-		var roleBindingList rbacv1.RoleBindingList
-		if err := clustersClient.List(gctx, m.ClusterName, &roleBindingList, opts...); err != nil {
-			return fmt.Errorf("failed to list workspace role bindings, error: %s", err)
-		}
-		roleBindings, err = getRoleBindings(roleBindingList)
-		return err
-	})
-
-	g.Go(func() error {
-		var policiesV2beta2List pacv2beta2.PolicyList
-		if err := clustersClient.List(gctx, m.ClusterName, &policiesV2beta2List, opts...); err != nil {
-			var policiesV2beta1List pacv2beta1.PolicyList
-			if err := clustersClient.List(gctx, m.ClusterName, &policiesV2beta1List, opts...); err != nil {
-				return fmt.Errorf("failed to list workspace policies, error: %s", err)
-			}
-			policies = getPoliciesV2beta1(policiesV2beta1List)
-			return nil
-		}
-		policies = getPoliciesV2beta2(policiesV2beta2List)
-		return nil
-	})
-
-	if err := g.Wait(); err != nil {
+func (s *server) GetWorkspace(ctx context.Context, req *capiv1_proto.GetWorkspaceRequest) (*capiv1_proto.GetWorkspaceResponse, error) {
+	if err := validateRequest(req); err != nil {
 		return nil, err
 	}
 
-	return &capiv1_proto.GetWorkspaceResponse{
-		Name:            m.WorkspaceName,
-		ClusterName:     m.ClusterName,
-		Namespaces:      namespaces,
-		ServiceAccounts: serviceAccounts,
-		Roles:           roles,
-		RoleBindings:    roleBindings,
-		Policies:        policies,
-	}, nil
-}
+	var list v1.NamespaceList
+	if err := s.listWorkspaceResources(ctx, req, &list); err != nil {
+		return nil, fmt.Errorf("failed to list workspace namespaces, error: %s", err)
+	}
 
-func getNamespaces(list v1.NamespaceList) []string {
 	var namespaces []string
 	for i := range list.Items {
 		namespaces = append(namespaces, list.Items[i].Name)
 	}
-	return namespaces
+
+	return &capiv1_proto.GetWorkspaceResponse{
+		Name:        req.WorkspaceName,
+		ClusterName: req.ClusterName,
+		Namespaces:  namespaces,
+	}, nil
 }
 
-func getServiceAccounts(list v1.ServiceAccountList) []*capiv1_proto.WorkspaceServiceAccount {
-	var serviceAccounts []*capiv1_proto.WorkspaceServiceAccount
-	for i := range list.Items {
-		serviceAccounts = append(serviceAccounts, &capiv1_proto.WorkspaceServiceAccount{
-			Name:      list.Items[i].Name,
-			Namespace: list.Items[i].Namespace,
-			Timestamp: list.Items[i].CreationTimestamp.String(),
-		})
+func (s *server) GetWorkspaceRoles(ctx context.Context, req *capiv1_proto.GetWorkspaceRequest) (*capiv1_proto.GetWorkspaceRolesResponse, error) {
+	if err := validateRequest(req); err != nil {
+		return nil, err
 	}
-	return serviceAccounts
-}
 
-func getRoles(list rbacv1.RoleList) ([]*capiv1_proto.WorkspaceRole, error) {
+	var list rbacv1.RoleList
+	if err := s.listWorkspaceResources(ctx, req, &list); err != nil {
+		return nil, fmt.Errorf("failed to list workspace roles, error: %s", err)
+	}
+
 	var roles []*capiv1_proto.WorkspaceRole
 	for i := range list.Items {
 		role := capiv1_proto.WorkspaceRole{
@@ -227,10 +146,24 @@ func getRoles(list rbacv1.RoleList) ([]*capiv1_proto.WorkspaceRole, error) {
 		role.Manifest = yml
 		roles = append(roles, &role)
 	}
-	return roles, nil
+
+	return &capiv1_proto.GetWorkspaceRolesResponse{
+		Name:        req.WorkspaceName,
+		ClusterName: req.ClusterName,
+		Objects:     roles,
+	}, nil
 }
 
-func getRoleBindings(list rbacv1.RoleBindingList) ([]*capiv1_proto.WorkspaceRoleBinding, error) {
+func (s *server) GetWorkspaceRoleBindings(ctx context.Context, req *capiv1_proto.GetWorkspaceRequest) (*capiv1_proto.GetWorkspaceRoleBindingsResponse, error) {
+	if err := validateRequest(req); err != nil {
+		return nil, err
+	}
+
+	var list rbacv1.RoleBindingList
+	if err := s.listWorkspaceResources(ctx, req, &list); err != nil {
+		return nil, fmt.Errorf("failed to list workspace role bindings, error: %s", err)
+	}
+
 	var roleBindings []*capiv1_proto.WorkspaceRoleBinding
 	for i := range list.Items {
 		roleBinding := capiv1_proto.WorkspaceRoleBinding{
@@ -245,35 +178,103 @@ func getRoleBindings(list rbacv1.RoleBindingList) ([]*capiv1_proto.WorkspaceRole
 		roleBinding.Manifest = yml
 		roleBindings = append(roleBindings, &roleBinding)
 	}
-	return roleBindings, nil
+
+	return &capiv1_proto.GetWorkspaceRoleBindingsResponse{
+		Name:        req.WorkspaceName,
+		ClusterName: req.ClusterName,
+		Objects:     roleBindings,
+	}, nil
 }
 
-func getPoliciesV2beta2(list pacv2beta2.PolicyList) []*capiv1_proto.WorkspacePolicy {
-	var policies []*capiv1_proto.WorkspacePolicy
+func (s *server) GetWorkspaceServiceAccounts(ctx context.Context, req *capiv1_proto.GetWorkspaceRequest) (*capiv1_proto.GetWorkspaceServiceAccountsResponse, error) {
+	if err := validateRequest(req); err != nil {
+		return nil, err
+	}
+
+	var list v1.ServiceAccountList
+	if err := s.listWorkspaceResources(ctx, req, &list); err != nil {
+		return nil, fmt.Errorf("failed to list workspace service accounts, error: %s", err)
+	}
+
+	var serviceAccounts []*capiv1_proto.WorkspaceServiceAccount
 	for i := range list.Items {
-		policies = append(policies, &capiv1_proto.WorkspacePolicy{
-			Id:        list.Items[i].GetName(),
-			Name:      list.Items[i].Spec.Name,
-			Category:  list.Items[i].Spec.Category,
-			Severity:  list.Items[i].Spec.Severity,
+		serviceAccounts = append(serviceAccounts, &capiv1_proto.WorkspaceServiceAccount{
+			Name:      list.Items[i].Name,
+			Namespace: list.Items[i].Namespace,
 			Timestamp: list.Items[i].CreationTimestamp.String(),
 		})
 	}
-	return policies
+
+	return &capiv1_proto.GetWorkspaceServiceAccountsResponse{
+		Name:        req.WorkspaceName,
+		ClusterName: req.ClusterName,
+		Objects:     serviceAccounts,
+	}, nil
 }
 
-func getPoliciesV2beta1(list pacv2beta1.PolicyList) []*capiv1_proto.WorkspacePolicy {
-	var policies []*capiv1_proto.WorkspacePolicy
-	for i := range list.Items {
-		policies = append(policies, &capiv1_proto.WorkspacePolicy{
-			Id:        list.Items[i].GetName(),
-			Name:      list.Items[i].Spec.Name,
-			Category:  list.Items[i].Spec.Category,
-			Severity:  list.Items[i].Spec.Severity,
-			Timestamp: list.Items[i].CreationTimestamp.String(),
-		})
+func (s *server) GetWorkspacePolicies(ctx context.Context, req *capiv1_proto.GetWorkspaceRequest) (*capiv1_proto.GetWorkspacePoliciesResponse, error) {
+	if err := validateRequest(req); err != nil {
+		return nil, err
 	}
-	return policies
+
+	var policies []*capiv1_proto.WorkspacePolicy
+
+	var list pacv2beta2.PolicyList
+	if err := s.listWorkspaceResources(ctx, req, &list); err != nil {
+		var list pacv2beta1.PolicyList
+		if err := s.listWorkspaceResources(ctx, req, &list); err != nil {
+			return nil, fmt.Errorf("failed to list workspace policies, error: %s", err)
+		}
+		for i := range list.Items {
+			policies = append(policies, &capiv1_proto.WorkspacePolicy{
+				Id:        list.Items[i].GetName(),
+				Name:      list.Items[i].Spec.Name,
+				Category:  list.Items[i].Spec.Category,
+				Severity:  list.Items[i].Spec.Severity,
+				Timestamp: list.Items[i].CreationTimestamp.String(),
+			})
+		}
+	} else {
+		for i := range list.Items {
+			policies = append(policies, &capiv1_proto.WorkspacePolicy{
+				Id:        list.Items[i].GetName(),
+				Name:      list.Items[i].Spec.Name,
+				Category:  list.Items[i].Spec.Category,
+				Severity:  list.Items[i].Spec.Severity,
+				Timestamp: list.Items[i].CreationTimestamp.String(),
+			})
+		}
+	}
+
+	return &capiv1_proto.GetWorkspacePoliciesResponse{
+		Name:        req.WorkspaceName,
+		ClusterName: req.ClusterName,
+		Objects:     policies,
+	}, nil
+}
+
+func validateRequest(req *capiv1_proto.GetWorkspaceRequest) error {
+	if req.ClusterName == "" {
+		return fmt.Errorf("required cluster name")
+	}
+	if req.WorkspaceName == "" {
+		return fmt.Errorf("required workspace name")
+	}
+	return nil
+}
+
+func (s *server) listWorkspaceResources(ctx context.Context, req *capiv1_proto.GetWorkspaceRequest, list client.ObjectList) error {
+	clustersClient, err := s.clustersManager.GetImpersonatedClientForCluster(ctx, auth.Principal(ctx), req.ClusterName)
+	if err != nil {
+		return fmt.Errorf("error getting impersonating client: %w", err)
+	}
+	opts := []client.ListOption{
+		client.MatchingLabels{tenantLabel: req.WorkspaceName},
+	}
+	if err := clustersClient.List(ctx, req.ClusterName, list, opts...); err != nil {
+		return err
+	}
+	return nil
 }
 
 func k8sObjectToYaml(obj client.Object) (string, error) {
